High-contrast fix for background image

--- a/www/_sass/custom.scss
+++ b/www/_sass/custom.scss
@@ -13,7 +13,7 @@
 #main-content .goal-tiles .pillar img {
     width: calc(100% - 10px);
 }
-body {
+body.contrast-default {
     background: white url("../img/SDG_watermark-logo.png") center center no-repeat;
 }
 #main-content {
